# rust-design-pattern

./: Cargo.toml  README.md
creational/: abstract_factory.rs  builder.rs  factory.rs  prototype.rs  simple_factory.rs
structural/: bridge.rs  composite.rs  facade.rs  flyweight.rs
