[package]
authors = ["lpxxn <mi_duo@live.com>"]
edition = "2018"
name = "rust_design_pattern"
version = "0.1.0"

[[bin]]
name = "factory"
path = "./creational/factory.rs"

[[bin]]
name = "abstract_factory"
path = "./creational/abstract_factory.rs"

[[bin]]
name = "simple_factory"
path = "./creational/simple_factory.rs"

[[bin]]
name = "prototype"
path = "./creational/prototype.rs"

[[bin]]
name = "builder"
path = "./creational/builder.rs"

[[bin]]
name = "strategy"
path = "./behavioral/strategy.rs"

[[bin]]
name = "state"
path = "./behavioral/state.rs"

[[bin]]
name = "command"
path = "./behavioral/command.rs"

[[bin]]
name = "iterator"
path = "./behavioral/iterator.rs"

[[bin]]
name = "observer"
path = "./behavioral/observer.rs"

[[bin]]
name = "chain_of_responsibility"
path = "./behavioral/chain_of_responsibility.rs"

[[bin]]
name = "bridge"
path = "./structural/bridge.rs"

[[bin]]
name = "composite"
path = "./structural/composite.rs"

[[bin]]
name = "facade"
path = "./structural/facade.rs"

[[bin]]
name = "flyweight"
path = "./structural/flyweight.rs"

[[bin]]
name = "adapter"
path = "./structural/adapter.rs"

[[bin]]
name = "decorator"
path = "./structural/decorator.rs"

[[bin]]
name = "proxy"
path = "./structural/proxy.rs"

[[bin]]
name = "singleton"
path = "./creational/singleton.rs"

[[bin]]
name = "singleton_mutex"
path = "./creational/singleton_mutex.rs"
